# qa_guru_18

./: pyproject.toml
