[tool.poetry]
name = "qa-guru-18"
version = "0.1.0"
description = ""
authors = ["Sergey Gavrilenko <serezagavrilenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc4"
pytest = "^7.4.4"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
